--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,9 @@ fieldset input, fieldset select{
     border-radius: 12px;
     border: 0 solid ;
     background-color: #F2994A;
+    color:white;
+    font-weight: 600;
+    font-size:16px;
 }
 .form label{
     display: block;
